[package]
name = "raknet-test"
version = "0.1.0"
edition = "2021"

[workspace.lints.rust]
rust-2018-idioms = "warn"

[dependencies]
build = "0.0.2"
bytes = "1.8.0"
futures = "0.3.31"
tokio = { version = "1.41.1", features = ["full"] }
fastrace = "0.7.4"
raknet-rs = "0.1.4"

#[dev-dependencies]
#tokio = { version = "1.41.1", features = ["full"] }
