[package]
name = "reliable-udp"
version = "0.1.0"
edition = "2021"

[workspace.lints.rust]
rust-2018-idioms = "warn"

[dependencies]
build = "0.0.2" # this isn't being used atm
bytes = "1.8.0"
futures = "0.3.31" # this isn't being used atm
tokio = { version = "1.41.1", features = [
    "full",
] } # this isn't being used at the moment
fastrace = "0.7.4" # this isn't being used atm
raknet-rs = "0.1.4" # this isn't being used atm
byteorder = "=1.5.0"
derivative = "=1.0.4"
bincode = "=1.3.3"
mio = "=0.6.23"
serde = "=1.0.215"
serde_derive = "=1.0.215"
rudp = "=0.2.1"
reqwest = "0.12.9"
laminar = "0.5"
rhai = "1.20.0"
#[dev-dependencies]
